--- a/back-end/BusinessLogic/BusinessLogic.csproj
+++ b/back-end/BusinessLogic/BusinessLogic.csproj
@@ -10,4 +10,10 @@
     <ProjectReference Include="..\DataAccess\DataAccess.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Interfaces\" />
+    <Folder Include="Models\" />
+    <Folder Include="Services\" />
+  </ItemGroup>
+
 </Project>
