--- a/back-end/BusinessLogic/BusinessLogic.csproj
+++ b/back-end/BusinessLogic/BusinessLogic.csproj
@@ -16,4 +16,8 @@
     <Folder Include="Services\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.0" />
+  </ItemGroup>
+
 </Project>
