feat: connect dbContect to project

--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@
 ##
 ## Get latest from `dotnet new gitignore`
 
-Server/appsettings.Development.json
+appsettings.Development.json
 appsettings.json
 Migrations/
 
